Create product / sku / discount CURD api based on dto model